[package]
name = "raycaster"
version = "1.0.0"
authors = ["Shapur"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cute = "0.3.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventListener',
  'HtmlBodyElement',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'ImageData',
  'KeyboardEvent',
  'MouseEvent',
  'Window',
]